--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WhatsApp</string>
+    <string name="app_name">WhatsApp_Fake</string>
     <string name="img_logo">img_logo</string>
     <string name="txt_digNome">Digite seu nome.</string>
     <string name="txt_cadastrar">Cadastrar</string>
