--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="img_perfil">img_perfil</string>
     <string name="txt_textoConfig">Clique na foto para mudar sua foto de perfil</string>
     <string name="txt_NumeroPadrao">+55 82 99999-9999</string>
+    <string name="txt_escrevaMensagem">Escreva sua mensagem</string>
+    <string name="txt_contatos">CONTATOS</string>
+    <string name="txt_conversas">CONVERSAS</string>
 </resources>
